# sitl_gazebo

./: CMakeLists.txt
include/: gazebo_mavlink_interface.h
models/auto-G2/: auto-G2.rsdf  auto-G2.sdf  model.config  readme.md
models/auto-G2/wheel/: wheel.sdf
models/autogyro/: TF-G1.rsdf  TF-G1.sdf  readme.md
models/autogyro/moving_box/: model.config  moving_box.sdf
models/autogyro/tests/balance_test/: TF-G1.world  model.config  model.sdf
models/autogyro/tests/balance_test/balance_test/: model.sdf  pokus.world
models/autogyro/wheel/: model.config  wheel.sdf
scripts/: QGC_remote_connect.bash
scripts/setspeed/: CMakeLists.txt  setspeed.cpp
src/: gazebo_const_speed_plugin.cpp  gazebo_join_speed_plugin.cpp  gazebo_joint_spring_plugin.cpp  gazebo_mavlink_interface.cpp  gazebo_mavlink_publisher_plugin.cpp  gazebo_motor_model.cpp  gazebo_rotor_blade_plugin.cpp  gazebo_rotor_plugin.cpp  gazebo_simple_motor.cpp  gazebo_simple_rotor.cpp  gazebo_slow_plugin.cpp  pokus.c
worlds/: TF-G1.world
